<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E2D0"
    android:padding="10dp"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/nom"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:inputType="text"
                android:padding="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:hint="@string/vide"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/pr_nom"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPrenom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:hint="@string/vide"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/date_de_naissance"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtDateNaissance"
                    android:layout_width="205dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="#30ffffff"
                    android:drawablePadding="20dp"
                    android:hint="@string/vide"
                    android:inputType="date"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDate"
                    style = "@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_action_name"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="#CF8676"
                    android:padding="20dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ville_de_naissance"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtVilleNaissance"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:hint="@string/vide"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/departement"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/txtDepartement"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:hint="@string/departement"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:entries="@array/departments"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tel"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/txtNumTel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="#30ffffff"
                android:drawablePadding="20dp"
                android:hint="@string/vide"
                android:inputType="phone"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAjouter"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:layout_below="@id/txtVilleNaissance"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#CF8676"
                android:text="@string/ajouter"
                android:translationX="90dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="340dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"></LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#CF8676"
                android:text="@string/validate" />




        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>



