<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E2D0"
    android:padding="10dp"
    tools:context=".DateFragment">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/date_de_naissance"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtDateNaissance"
                    android:layout_width="205dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="#30ffffff"
                    android:drawablePadding="20dp"
                    android:hint="@string/vide"
                    android:inputType="date"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDate"
                    style = "@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_action_name"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="#CF8676"
                    android:padding="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="340dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDateValidate"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="-40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#CF8676"
                    android:text="@string/validate"
                    android:translationX="90dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDateCancel"
                    android:layout_width="105dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#CF8676"
                    android:text="@string/cancel"
                    android:translationX="90dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>